--- a/front-end/HTML/10.表单.html
+++ b/front-end/HTML/10.表单.html
@@ -64,7 +64,7 @@ mothod：post，get，提交方式
         -->
         按钮：
         <input type="button" name="btn1" value="点击变长">
-        <input type="image" src="resource/image/1.jpg">
+        <input type="image" src="../resource/image/1.jpg">
     </p>
 
     <p>
@@ -124,7 +124,7 @@ mothod：post，get，提交方式
     <p>
 
 
-        <img src="resource/image/表单元素格式.png">
+        <img src="../resource/image/表单元素格式.png">
     </p>
 
 
