--- a/front-end/HTML/7.媒体元素.html
+++ b/front-end/HTML/7.媒体元素.html
@@ -14,6 +14,6 @@ autoplay：自动播放
 -->
 
 <!--<video src="resource/audio/火苗.mp3" controls autoplay></video>-->
-<audio src="resource/audio/火苗.mp3" controls autoplay></audio>
+<audio src="../resource/audio/火苗.mp3" controls autoplay></audio>
 </body>
 </html>
