--- a/front-end/HTML/8.页面结构.html
+++ b/front-end/HTML/8.页面结构.html
@@ -12,7 +12,7 @@
 <section>
     <h2>网页主体</h2>
     <!--命名规范要按照下图的元素名命名-->
-    <img src="resource/image/页面结构.png" alt="页面结构图" title="页面结构图">
+    <img src="../resource/image/页面结构.png" alt="页面结构图" title="页面结构图">
 </section>
 <footer>
     <h2>网页脚部分</h2>
